5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1716_2503.log
== TEST (2019-05-14 17:36:11) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

print (round(n,8))
-- OUTPUT:
136
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:38:58) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 1

while (cont < n):
	resultado = n / (var+2)
	cont = cont + 1	

print (round(resultado,8))
-- OUTPUT:
45.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:23) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 1

while (cont < n):
	resultado = n / (var+1)
	cont = cont + 1	

print (round(resultado,8))
-- OUTPUT:
68.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:38) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 1

while (cont < n):
	resultado = n / (var)
	cont = cont + 2	

print (round(resultado,8))
-- OUTPUT:
136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:39:56) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0

while (cont < n):
	resultado = n / (var + 2)
	cont = cont + 2	

print (round(resultado,8))
-- OUTPUT:
68.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:40:06) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0

while (cont < n):
	resultado = n / (var + 2)
	cont = cont + 1

print (round(resultado,8))
-- OUTPUT:
68.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:45:12) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0
sinal = -1

while (cont < n):
	resultado = n + (sinal * (var + 2))
	sinal = sinal + (-1)
	cont = cont + 1

print (round(resultado,8))
-- EXECUTION TIME:
0.155275
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
-136
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
-22
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
-15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:14) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0
sinal = -1

while (cont < n):
	resultado = n + (sinal * (var + 2))
	sinal = sinal + (-1)
	cont = cont + 1

print (round(resultado,8))
-- OUTPUT:
-136
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:47) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0
sinal = -1

while (cont < n):
	resultado = 2 + n + (sinal * (var + 2))
	sinal = sinal + (-1)
	cont = cont + 1

print (round(resultado,8))
-- OUTPUT:
-134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:46:05) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

cont = 0
var = 0
sinal = -1

while (cont < n):
	resultado = 2 + n / (sinal * (var + 2))
	sinal = sinal + (-1)
	cont = cont + 1

print (round(resultado,8))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:52:01) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	resultado = 2 + n / (sinal * (var + 2))
	sinal = sinal + (-1)
	cont = cont + 1

print (round(resultado,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    cont = cont + 1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:52:19) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	resultado = 2 + n / (sinal * (var + 2))
	sinal = sinal + (-1)
	pi = pi + 1

print (round(resultado,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    cont = cont + 1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:56:30) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	if (n < 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1


print (round(resultado,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:56:41) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	if (n < 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1


print (round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:57:20) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	if (n % 2):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1


print (round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:01) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0


var = 0
sinal = -1

while (n >= 1):
	if (n % 2):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1

print (round(n,8))
-- EXECUTION TIME:
0.151766
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:23) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0

while (n >= 1):
	if (n % 2):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1

print (round(n,8))
-- EXECUTION TIME:
0.175115
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:53) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))

pi = 0

while (n >= 1):
	if (n % 2 == 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1

print (round(n,8))
-- EXECUTION TIME:
0.243836
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:11) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))
pi = 0

while (n >= 1):
	if (n % 2 == 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1
print (round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:48:14) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))
pi = 0

while (n >= 1):
	if (n % 2 == 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1
print (round(n,8))
-- EXECUTION TIME:
0.198513
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:54) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))
pi = 0

while (n >= 1):
	if (n % 2 == 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1
print (round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:30) 
-- CODE:
from math import *

n = int(input("Informe valor de N: "))
pi = 0

while (n >= 1):
	if (n % 2 == 1):
		pi = pi + (4/2*n-1)
	else:
		pi = pi - (4/2*n-1)
	n = n -1
print (round(n,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print (round(resultado,8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:30:39) 
-- CODE:
questao 9- professor fez

n = int(input("digite um numero:"))
pi = 0
while(n >= 1):
	if(n % 2 == 1):
		pi = pi + (4 / ((2 * n) - 1)) # se por impar
	else:
		pi = pi - (4 / ((2 * n) - 1)) # se for par
		
	n = n - 1
print(round(pi,8))
-- EXECUTION TIME:
0.137129
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 1
    questao 9- professor fez
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:31:04) 
-- CODE:
n = int(input("digite um numero:"))
pi = 0

while(n >= 1):
	if(n % 2 == 1):
		pi = pi + (4 / ((2 * n) - 1)) # se por impar
	else:
		pi = pi - (4 / ((2 * n) - 1)) # se for par
		
	n = n - 1
print(round(pi,8))
-- EXECUTION TIME:
0.235544
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
